using gradle for better kotlin highlighting